--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
     "name": "react-icofont",
-    "version": "1.0.13",
+    "version": "1.0.14",
     "description": "React wrapper for icofont project (https://icofont.com/)",
     "main": "build/index.js",
     "peerDependencies": {
         "react": "^16"
-    },
-    "dependencies": {
-        "react": "^16.9",
-        "webpack": "^2.6"
     },
     "scripts": {
         "start": "webpack --watch",
@@ -28,7 +24,10 @@
         "babel-preset-env": "^1.5.1",
         "css-loader": "^1.0.1",
         "style-loader": "^0.22.1",
-        "url-loader": "^1.1.2"
+        "url-loader": "^1.1.2",
+        "react": "^16.9",
+        "webpack": "^4",
+        "webpack-cli": "^3.3"
     },
     "license": "MIT",
     "repository": {
